--- a/videoflix/templates/password_reset_subject.html
+++ b/videoflix/templates/password_reset_subject.html
@@ -1,3 +1,3 @@
-{% load i18n %}{% autoescape off %}
-{% blocktranslate %}Password reset on {{ site_name }}{% endblocktranslate %}
-{% endautoescape %}
+Hi {{user.username}} You made an password reset request.
+Please click on the link below to reset your password.
+http://{{domain}}{% url 'password_confirm' uidb64=uid token=token  %}
